Fix BshClassPathTest failing jar URL for Windows.